# fleet-adapter-tutorial

./: .gitignore  .gitmodules  README.md
maps/maze-complete/: maze.yaml
maps/maze-new/: maze.yaml
ros1/src/mir_fleet_manager/: CMakeLists.txt  package.xml  setup.py
ros1/src/mir_fleet_manager/launch/: fleet_manager.launch
ros1/src/mir_fleet_manager/nodes/: fleet_manager
ros1/src/mir_fleet_manager/rviz/: fleet_navigation.rviz
ros1/src/mir_fleet_manager/src/fleet_manager/: fleet_manager.py
ros1/src/mir_vendor_setup/: CMakeLists.txt  package.xml
ros2/src/fleet_ros2_bridge/: CMakeLists.txt  bridge_node.cpp  package.xml
ros2/src/mir_fleet_manager/: package.xml
ros2/src/nav_goal_pub/: nav_goal_pub.py  package.xml  setup.py
ros2/src/rmf_map_to_graph/: CMakeLists.txt  package.xml
ros2/src/rmf_map_to_graph/include/: load.hpp  load_graph.hpp
ros2/src/rmf_map_to_graph/src/: load_graph.cpp
ros2/src/rmf_traffic_ros2_schedule/: CMakeLists.txt  package.xml
ros2/src/rmf_traffic_ros2_schedule/include/: ScheduleNode.hpp
ros2/src/rmf_traffic_schedule/: CMakeLists.txt  package.xml
ros2/src/rmf_traffic_schedule/src/: ScheduleNode.cpp  run_schedule.cpp
src/mir_vendor_setup/launch/: main.launch
