<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mir_fleet_manager</name>
  <version>0.0.0</version>
  <description>Fleet Manager for the mir_robot package</description>
  <maintainer email="cnboonhan94@gmail.com">Charayaphan Nakorn Boon Han</maintainer>
  <license>Apache License 2.0</license>
  <author>Charayaphan Nakorn Boon Han</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

