<?xml version="1.0"?>
<package format="3">
  <name>nav_goal_pub</name>
  <version>0.0.0</version>
  <description>Just a mock nav goal pub</description>
  <maintainer email="youliang.tan@hopetechinik.com">You Liang</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>atm_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>atm_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
