<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rmf_map_to_graph</name>
  <version>0.0.0</version>
  <description>Translating yaml files from traffic-editor to rmf-traffic Graphs</description>
  <maintainer email="cnboonhan94@gmail.com">Charayaphan Nakorn Boon Han</maintainer>
  <license>Apache License 2.0</license>
  <author>Charayaphan Nakorn Boon Han</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmf_traffic</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmf_traffic</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

