<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rmf_traffic_ros2_schedule</name>
  <version>0.0.0</version>
  <description>Implementation of the RMF schedule in ROS2</description>
  <maintainer email="cnboonhan94@gmail.com">Charayaphan Nakorn Boon Han</maintainer>
  <license>Apache License 2.0</license>
  <author>Charayaphan Nakorn Boon Han</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

